# adriconf

./: .gitignore  AUTHORS  Application.cpp  Application.h  ApplicationOption.cpp  ApplicationOption.h  CMakeLists.txt  CMakeLists.txt.in  CONTRIBUTING.md  ConfigurationLoader.cpp  ConfigurationLoader.h  ConfigurationResolver.cpp  ConfigurationResolver.h  DRIQuery.cpp  DRIQuery.h  Device.cpp  Device.h  DriConf.glade  DriverConfiguration.cpp  DriverConfiguration.h  DriverOption.cpp  DriverOption.h  DriverOptionType.h  GPUInfo.cpp  GPUInfo.h  GUI.cpp  GUI.h  HelpersWayland.cpp  Jenkinsfile  Option.cpp  Option.h  PCIDatabaseQuery.h  Parser.cpp  Parser.h  README.md  RELEASING.md  Section.cpp  Section.h  Writer.cpp  Writer.h  (+1 more)
DEBIAN/: changelog  control  copyright
adriconf/: ApplicationOption.h  CMakeLists.txt  ConfigurationLoader.cpp  ConfigurationLoader.h  ConfigurationResolver.cpp  ConfigurationResolver.h  DRIQuery.cpp  DRIQuery.h  Device.h  DriConf.glade  DriverOption.cpp  GPUInfo.cpp  GUI.cpp  GUI.h  HelpersWayland.cpp  HelpersWayland.h  Logger.cpp  Logger.h  Parser.cpp  Parser.h  ParserInterface.h  Writer.h  adriconf.gresource.xml  main.cpp  version.h.in
adriconf/Logging/: Logger.cpp  Logger.h  LoggerInterface.h  LoggerLevel.h
adriconf/Translation/: GetTextTranslator.cpp  GetTextTranslator.h  TranslatorInterface.h
adriconf/Utils/: ConfigurationLoader.cpp  ConfigurationLoader.h  ConfigurationLoaderInterface.h  ConfigurationResolver.cpp  ConfigurationResolver.h  ConfigurationResolverInterface.h  DRIQuery.cpp  DRIQuery.h  DRMDeviceFactory.cpp  DRMDeviceFactory.h  DRMDeviceFactoryInterface.h  DisplayServerQueryInterface.h  EGLDisplayFactory.cpp  EGLDisplayFactory.h  EGLDisplayFactoryInterface.h  GBMDeviceFactory.cpp  GBMDeviceFactory.h  GBMDeviceFactoryInterface.h  GBMUtils.cpp  GBMUtils.h  GBMUtilsInterface.h  GetTextTranslator.cpp  GetTextTranslator.h  HelpersWayland.cpp  HelpersWayland.h  PCIDatabaseQuery.cpp  PCIDatabaseQuery.h  PCIDatabaseQueryInterface.h  Parser.cpp  Parser.h  ParserInterface.h  TranslatorInterface.h  WaylandQuery.cpp  WaylandQuery.h  Writer.h  WriterInterface.h  XorgQuery.cpp  XorgQuery.h
adriconf/ValueObject/: Application.cpp  ApplicationOption.cpp  ComboBoxColumn.h  DRMDevice.cpp  DRMDevice.h  DRMDeviceInterface.h  DriverConfiguration.h  EGLDisplayInterface.h  EGLDisplayWrapper.cpp  EGLDisplayWrapper.h  GBMDevice.cpp  GBMDevice.h  Section.h
flatpak/: br.com.jeanhertel.adriconf.appdata.xml  br.com.jeanhertel.adriconf.desktop  br.com.jeanhertel.adriconf.json  org.x.adriconf.appdata.xml  org.x.adriconf.json  org.xorg.adriconf.json
po/: LINGUAS  POTFILES.in  adriconf.pot  driconf3.pot  en.po  hr.po  it.po  lv.po  pl.po  pt_BR.po  zh_CN.po
tests/: ApplicationOptionTest.cpp  ApplicationTest.cpp  CMakeLists.txt  ConfigurationResolverTest.cpp  DeviceTest.cpp  DriverConfigurationTest.cpp  DriverOptionTest.cpp  GPUInfoTest.cpp  LoggerMock.h  SectionTest.cpp  testMain.cpp
tests/Logging/: LoggerMock.h
tests/Translation/: TranslatorMock.h
tests/Utils/: ParserMock.h
